--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,26 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-      version="3.0">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
 
-  <!--
-    This listener loads a class in the default package called Scalatra.
-    That class should implement org.scalatra.LifeCycle.  Your app can be
-    configured in Scala code there.
-  -->
-  <listener>
-    <listener-class>org.scalatra.servlet.ScalatraListener</listener-class>
-  </listener>
-  <listener>
-    <listener-class>com.chicagof1.metrics.MetricsServletContextListener</listener-class>
-  </listener>
-  <servlet>
-    <servlet-name>AdminServlet</servlet-name>
-    <servlet-class>com.codahale.metrics.servlets.AdminServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AdminServlet</servlet-name>
-    <url-pattern>/admin/*</url-pattern>
-  </servlet-mapping>
+    <!--
+      This listener loads a class in the default package called Scalatra.
+      That class should implement org.scalatra.LifeCycle.  Your app can be
+      configured in Scala code there.
+    -->
+    <listener>
+        <listener-class>org.scalatra.servlet.ScalatraListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>com.chicagof1.metrics.MetricsServletContextListener</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>AdminServlet</servlet-name>
+        <servlet-class>com.codahale.metrics.servlets.AdminServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminServlet</servlet-name>
+        <url-pattern>/admin/*</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>FacebookFilter</filter-name>
+        <filter-class>org.pac4j.j2e.filter.RequiresAuthenticationFilter</filter-class>
+        <init-param>
+            <param-name>clientsFactory</param-name>
+            <param-value>com.chicagof1.auth.MyClientsFactory</param-value>
+        </init-param>
+        <init-param>
+            <param-name>clientName</param-name>
+            <param-value>FacebookClient</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>FacebookFilter</filter-name>
+        <url-pattern>/fb/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>CallbackFilter</filter-name>
+        <filter-class>org.pac4j.j2e.filter.CallbackFilter</filter-class>
+        <init-param>
+            <param-name>clientsFactory</param-name>
+            <param-value>com.chicagof1.auth.MyClientsFactory</param-value>
+        </init-param>
+        <init-param>
+            <param-name>defaultUrl</param-name>
+            <param-value>/</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CallbackFilter</filter-name>
+        <url-pattern>/callback</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
 </web-app>
