--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,21 +43,21 @@
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
 
-    <filter>
-        <filter-name>CallbackFilter</filter-name>
-        <filter-class>org.pac4j.j2e.filter.CallbackFilter</filter-class>
-        <init-param>
-            <param-name>clientsFactory</param-name>
-            <param-value>com.chicagof1.auth.MyClientsFactory</param-value>
-        </init-param>
-        <init-param>
-            <param-name>defaultUrl</param-name>
-            <param-value>/</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>CallbackFilter</filter-name>
-        <url-pattern>/callback</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>CallbackFilter</filter-name>-->
+        <!--<filter-class>org.pac4j.j2e.filter.CallbackFilter</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>clientsFactory</param-name>-->
+            <!--<param-value>com.chicagof1.auth.MyClientsFactory</param-value>-->
+        <!--</init-param>-->
+        <!--<init-param>-->
+            <!--<param-name>defaultUrl</param-name>-->
+            <!--<param-value>/</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>CallbackFilter</filter-name>-->
+        <!--<url-pattern>/callback</url-pattern>-->
+        <!--<dispatcher>REQUEST</dispatcher>-->
+    <!--</filter-mapping>-->
 </web-app>
